Starting work on evans output. Need quadrature points. Test interpolation to these points. Need to implement emission vectors. Verify P and K calculations. Fix P. Should IPP be used for matrixops?
git-svn-id: file:///mnt/svn/rtmath@448 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -9,8 +9,8 @@ aux_source_directory (src libsrcs)
 include (../CMakeRules/common.cmake)
 
 # Options
-option ( USE_IPP_MATRIXOP
-	"Use Intel Integrated Performance Primitives in matrixops" OFF)
+option ( USE_IPP
+	"Use Intel Integrated Performance Primitives" OFF)
 option ( USE_OPENMP
 	"Enable OpenMP to speed up execution in certain areas" OFF)
 
