Working on ddscat.par generation. Need to add in better frequency expansion, specifying linear, log, inverse, exp, along with possible unit conversion. Add in .rtmath.conf defaults about number of angles to consider. Redo config::getVal default value-returning function.
git-svn-id: file:///mnt/svn/rtmath@449 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/ddscat-genparams/ddscat-genparams.vcxproj
+++ b/rtmath/rtmath-apps/ddscat-genparams/ddscat-genparams.vcxproj
@@ -68,6 +68,7 @@
     <None Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="help.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Stdafx.cpp" />
   </ItemGroup>
