--- a/rtmath/rtmath-apps/ddscat-genparams/ddscat-genparams.vcxproj.filters
+++ b/rtmath/rtmath-apps/ddscat-genparams/ddscat-genparams.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="help.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="CMakeLists.txt">
