Early attempt at providing rtmath library install targets.
git-svn-id: file:///mnt/svn/rtmath@452 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -70,3 +70,18 @@ IF(${UNIX})
 include_directories (AFTER SYSTEM ${ROOT_INCLUDES})
 ENDIF(${UNIX})
 
+
+# Install targets. This ensures that the library is in a valid location, 
+# and places the testing program in the appropriate directory.
+
+# Headers
+INSTALL(DIRECTORY rtmath DESTINATION include)
+
+# Executables and libraries
+INSTALL(TARGETS rtmath-tests rtmath-static rtmath 
+	RUNTIME DESTINATION bin
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib
+)
+
+
