Project builds on gcc again. Need to work more on source writing. CMakeLists updated to add install targets for all apps and libraries. Need to add appropriate target for test code.
Apps now link to dynamic rtmath. LD_LIBRARY_PATH and LIBRARY_PATH need to 
reflect where the libraries are. This in not to be covered by this build 
system, as the user may specify the destination prefixes. See the standard 
module file on solar for hints. May eventually include a file like this 
if I produce packaged builds anytime.



git-svn-id: file:///mnt/svn/rtmath@453 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/db-catalog-ddscat/CMakeLists.txt
+++ b/rtmath/rtmath-apps/db-catalog-ddscat/CMakeLists.txt
@@ -5,7 +5,7 @@ include(../../FindROOT.cmake)
 # For now, don't build on windows
 IF(${UNIX})
 add_executable (rtmath-db-catalog-ddscat process_ddscat.cpp)
-target_link_libraries (rtmath-db-catalog-ddscat rtmath-static)
+target_link_libraries (rtmath-db-catalog-ddscat rtmath)
 
 
 target_link_libraries (rtmath-db-catalog-ddscat netcdf m boost_filesystem boost_unit_test_framework boost_system)
@@ -20,4 +20,8 @@ set_target_properties(rtmath-db-catalog-ddscat PROPERTIES COMPILE_FLAGS -std=c++
 ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 
 ENDIF(${UNIX})
+
+
+INSTALL(TARGETS rtmath-db-catalog-ddscat RUNTIME DESTINATION bin)
+
 
