--- a/rtmath/rtmath-apps/absorb-slab/CMakeLists.txt
+++ b/rtmath/rtmath-apps/absorb-slab/CMakeLists.txt
@@ -3,7 +3,7 @@
 include(../../FindROOT.cmake)
 
 add_executable (rtmath-absorb-slab absorb-slab.cpp)
-target_link_libraries (rtmath-absorb-slab rtmath-static)
+target_link_libraries (rtmath-absorb-slab rtmath)
 
 IF(${UNIX})
 target_link_libraries (rtmath-absorb-slab netcdf m boost_filesystem boost_unit_test_framework boost_system)
@@ -17,4 +17,5 @@ IF(${CMAKE_COMPILER_IS_GNUCXX})
 set_target_properties(rtmath-absorb-slab PROPERTIES COMPILE_FLAGS -std=c++0x)
 ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 
+INSTALL(TARGETS rtmath-absorb-slab RUNTIME DESTINATION bin)
 
