--- a/rtmath/rtmath-apps/conv-units/CMakeLists.txt
+++ b/rtmath/rtmath-apps/conv-units/CMakeLists.txt
@@ -3,7 +3,7 @@
 include(../../FindROOT.cmake)
 
 add_executable (rtmath-conv-units conv.cpp)
-target_link_libraries (rtmath-conv-units rtmath-static)
+target_link_libraries (rtmath-conv-units rtmath)
 
 IF(${UNIX})
 target_link_libraries (rtmath-conv-units netcdf m boost_filesystem boost_unit_test_framework boost_system)
@@ -17,4 +17,5 @@ IF(${CMAKE_COMPILER_IS_GNUCXX})
 set_target_properties(rtmath-conv-units PROPERTIES COMPILE_FLAGS -std=c++0x)
 ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 
+INSTALL(TARGETS rtmath-conv-units RUNTIME DESTINATION bin)
 
