--- a/rtmath/rtmath-apps/ddscat-genparams/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-genparams/CMakeLists.txt
@@ -2,8 +2,8 @@
 
 include(../../FindROOT.cmake)
 
-add_executable (rtmath-ddscat-genparams main.cpp Stdafx.cpp)
-target_link_libraries (rtmath-ddscat-genparams rtmath-static)
+add_executable (rtmath-ddscat-genparams main.cpp Stdafx.cpp help.cpp)
+target_link_libraries (rtmath-ddscat-genparams rtmath)
 
 IF(${UNIX})
 target_link_libraries (rtmath-ddscat-genparams netcdf m boost_filesystem boost_unit_test_framework boost_system)
@@ -17,4 +17,5 @@ IF(${CMAKE_COMPILER_IS_GNUCXX})
 set_target_properties(rtmath-ddscat-genparams PROPERTIES COMPILE_FLAGS -std=c++0x)
 ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 
+INSTALL(TARGETS rtmath-ddscat-genparams RUNTIME DESTINATION bin)
 
