--- a/rtmath/rtmath-apps/sector/CMakeLists.txt
+++ b/rtmath/rtmath-apps/sector/CMakeLists.txt
@@ -3,7 +3,7 @@
 include(../../FindROOT.cmake)
 
 add_executable (rtmath-sector sector.cpp)
-target_link_libraries (rtmath-sector rtmath-static)
+target_link_libraries (rtmath-sector rtmath)
 
 IF(${UNIX})
 target_link_libraries (rtmath-sector netcdf m boost_filesystem boost_unit_test_framework boost_system)
@@ -17,4 +17,5 @@ IF(${CMAKE_COMPILER_IS_GNUCXX})
 set_target_properties(rtmath-sector PROPERTIES COMPILE_FLAGS -std=c++0x)
 ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 
+INSTALL(TARGETS rtmath-sector RUNTIME DESTINATION bin)
 
