--- a/rtmath/rtmath-apps/transmittance/CMakeLists.txt
+++ b/rtmath/rtmath-apps/transmittance/CMakeLists.txt
@@ -3,7 +3,7 @@
 include(../../FindROOT.cmake)
 
 add_executable (rtmath-transmittance transmittance.cpp)
-target_link_libraries (rtmath-transmittance rtmath-static)
+target_link_libraries (rtmath-transmittance rtmath)
 
 IF(${UNIX})
 target_link_libraries (rtmath-transmittance netcdf m boost_filesystem boost_unit_test_framework boost_system)
@@ -17,4 +17,5 @@ IF(${CMAKE_COMPILER_IS_GNUCXX})
 set_target_properties(rtmath-transmittance PROPERTIES COMPILE_FLAGS -std=c++0x)
 ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 
+INSTALL(TARGETS rtmath-transmittance RUNTIME DESTINATION bin)
 
