git-svn-id: file:///mnt/svn/rtmath@454 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/db-catalog-ddscat/CMakeLists.txt
+++ b/rtmath/rtmath-apps/db-catalog-ddscat/CMakeLists.txt
@@ -22,6 +22,6 @@ ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 ENDIF(${UNIX})
 
 
-INSTALL(TARGETS rtmath-db-catalog-ddscat RUNTIME DESTINATION bin)
+#INSTALL(TARGETS rtmath-db-catalog-ddscat RUNTIME DESTINATION bin)
 
 
