Build system modified so that I now have a windows / mac package target, creating an executable installer on these platforms. Need to add a linux equivalent, to produce rpms and debs, instead of just make install.
git-svn-id: file:///mnt/svn/rtmath@455 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -21,17 +21,17 @@ set(CPACK_PACKAGE_VERSION "1.0.0")
 set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "0")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
-set(CPACK_PACKAGE_INSTALL_DIRECTORY "Package")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "rtmath")
 
 set (CPACK_COMPONENTS_ALL 
-	#	 Applications 
+	Applications 
 	Libraries 
 	Tests 
 	Headers
 )
 
-#set(CPACK_COMPONENT_APPLICATIONS_DESCRIPTION 
-# "All of the rtmath apps")
+set(CPACK_COMPONENT_APPLICATIONS_DESCRIPTION 
+	"All of the rtmath apps")
 set(CPACK_COMPONENT_LIBRARIESS_DESCRIPTION 
 	"The compiled libraries")
 set(CPACK_COMPONENT_TESTS_DESCRIPTION 
@@ -41,7 +41,7 @@ set(CPACK_COMPONENT_HEADERS_DESCRIPTION
 
 set(CPACK_COMPONENT_HEADERS_DEPENDS Libraries)
 set(CPACK_COMPONENT_TESTS_DEPENDS Libraries)
-#set(CPACK_COMPONENT_APPLICATIONS_DEPENDS Libraries)
+set(CPACK_COMPONENT_APPLICATIONS_DEPENDS Libraries)
 
 
 
