--- a/rtmath/rtmath-apps/getm/CMakeLists.txt
+++ b/rtmath/rtmath-apps/getm/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Create the test program and link it with the rtmath library
 
-include(../../FindROOT.cmake)
+include (../../CMakeRules/common.cmake)
 
 add_executable (rtmath-getm getm.cpp)
 target_link_libraries (rtmath-getm rtmath)
@@ -17,6 +17,6 @@ IF(${CMAKE_COMPILER_IS_GNUCXX})
 set_target_properties(rtmath-getm PROPERTIES COMPILE_FLAGS -std=c++0x)
 ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 
-#INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin)
-INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin RENAME rtmath-genmtab)
+#INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin COMPONENT Applications)
+INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin RENAME rtmath-genmtab COMPONENT Applications)
 
