Tiny tweak for debian.
git-svn-id: file:///mnt/svn/rtmath@456 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -22,6 +22,7 @@ set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "0")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "rtmath")
+set(CPACK_PACKAGE_CONTACT "Ryan Honeyager (rhoneyager@fsu.edu)"
 
 set (CPACK_COMPONENTS_ALL 
 	Applications 
@@ -43,7 +44,7 @@ set(CPACK_COMPONENT_HEADERS_DEPENDS Libraries)
 set(CPACK_COMPONENT_TESTS_DEPENDS Libraries)
 set(CPACK_COMPONENT_APPLICATIONS_DEPENDS Libraries)
 
-
+set(CPACK_COMPONENT_LIBRARIES_REQUIRED 1)
 
 # This must always be last!
 include(CPack)
