--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -22,7 +22,7 @@ set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "0")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "rtmath")
-set(CPACK_PACKAGE_CONTACT "Ryan Honeyager (rhoneyager@fsu.edu)"
+set(CPACK_PACKAGE_CONTACT "Ryan Honeyager (rhoneyager@fsu.edu)")
 
 set (CPACK_COMPONENTS_ALL 
 	Applications 
