mieScattMatrix implemented. Allows for mie calculations to be input into dda-dependent code fields. Allows for same output format without extra effort. This is important because I need to validate K and parts of P.
More work done on Evans writeout. Need to figure out how to handle rotations (for incoming/outgoing angles), as dda
requires two sets of angles, instead of alpha.


git-svn-id: file:///mnt/svn/rtmath@458 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="rtmath\mie\mie-tauNCalc.h" />
     <ClInclude Include="rtmath\mie\mie-wnCalc.h" />
     <ClInclude Include="rtmath\mie\mie.h" />
+    <ClInclude Include="rtmath\mie\mieScattMatrix.h" />
     <ClInclude Include="rtmath\netcdf\ncContainer.h" />
     <ClInclude Include="rtmath\netcdf\ncDim.h" />
     <ClInclude Include="rtmath\netcdf\ncVar.h" />
@@ -230,6 +231,7 @@
     <ClCompile Include="src\mie-Scalc.cpp" />
     <ClCompile Include="src\mie-tauNCalc.cpp" />
     <ClCompile Include="src\mie-wnCalc.cpp" />
+    <ClCompile Include="src\mieScattMatrix.cpp" />
     <ClCompile Include="src\MurmurHash3.cpp" />
     <ClCompile Include="src\ncContainer.cpp" />
     <ClCompile Include="src\os_functions.cpp" />
