Mie data generator for ddscat now implemented fully. It generates ddOutputMie (from ddOutputSingle) and mieScattMatrices that reflect scattering by mie particles. This will be used to verify P and K, and provides an ensemble check (as all orientation ensembles of spheres should not be the same as any member).
Also added mie project to generate mie data with the same output formats as ddparse.
Also, output formats of both programs are now specifiable on the command line.
TODO: add in format specifier in rtmath config?


git-svn-id: file:///mnt/svn/rtmath@460 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="rtmath\macros.h" />
     <ClInclude Include="rtmath\mapid.h" />
     <ClInclude Include="rtmath\matrixop.h" />
+    <ClInclude Include="rtmath\mie\ddOutputMie.h" />
     <ClInclude Include="rtmath\mie\mie-abNCalc.h" />
     <ClInclude Include="rtmath\mie\mie-AnCalc.h" />
     <ClInclude Include="rtmath\mie\mie-phaseFunc.h" />
@@ -207,6 +208,7 @@
     <ClCompile Include="src\ddLoader.cpp" />
     <ClCompile Include="src\ddOutput.cpp" />
     <ClCompile Include="src\ddOutputEnsemble.cpp" />
+    <ClCompile Include="src\ddOutputMie.cpp" />
     <ClCompile Include="src\ddOutputSingle.cpp" />
     <ClCompile Include="src\ddscat.cpp" />
     <ClCompile Include="src\ddScattMatrix.cpp" />
