--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -13,4 +13,5 @@ add_subdirectory (rtmath-version)
 add_subdirectory (sector)
 add_subdirectory (transmittance)
 add_subdirectory (uuid)
+add_subdirectory (mie)
 
