Corrections to allow shapefile code to build.
shapefile loads completed. Should split loadfile into statistics-generating section.
Also, should I allow for shapefile rotation? Need accessors for tensor quantities, along with
unit compatibility.
Assuming gaussian orientation distributions, allow for calculation of rot functions relative to each other
for use in ddscat calcs and pf generation.
Need to add calculation for rot pe, ke and te.

Should matrixops be extended to be more like matlab?
Need to rename coords::cyclic, as it is not cyclic...
Also, could coords be a special case of matrixop?

Added boost accumulators to stdafx.


git-svn-id: file:///mnt/svn/rtmath@464 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -109,6 +109,7 @@
     <ClInclude Include="rtmath\ddscat\ddscat.h" />
     <ClInclude Include="rtmath\ddscat\ddScattMatrix.h" />
     <ClInclude Include="rtmath\ddscat\ddweights.h" />
+    <ClInclude Include="rtmath\ddscat\shapefile.h" />
     <ClInclude Include="rtmath\defs.h" />
     <ClInclude Include="rtmath\enums.h" />
     <ClInclude Include="rtmath\error\debug.h" />
@@ -247,6 +248,7 @@
     <ClCompile Include="src\refract.cpp" />
     <ClCompile Include="src\rtmath.cpp" />
     <ClCompile Include="src\Scalc-Rayleigh.cpp" />
+    <ClCompile Include="src\shapefile.cpp" />
     <ClCompile Include="src\Stdafx.cpp" />
     <ClCompile Include="src\surfaces.cpp" />
     <ClCompile Include="src\thermal.cpp" />
