rtmath-static had root includes, but not root libs. This was added now that it matters.
git-svn-id: file:///mnt/svn/rtmath@468 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -71,6 +71,7 @@ ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
 # Add in root dependencies on unix (AND WINDOWS)
 IF(${UNIX})
 include_directories (AFTER SYSTEM ${ROOT_INCLUDES})
+target_link_libraries (rtmath-static ${ROOT_LIBRARIES})
 ENDIF(${UNIX})
 
 
