Lots of work involved in being able to read ddscat.par files (mostly implemented, need places to store data), work on calculating statistics (need accumulators and place to store data).
Corrections to several places in code. Reordering headers. Adding more boost to Stdafx.

coords get now takes both start and span.


git-svn-id: file:///mnt/svn/rtmath@472 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="rtmath\ddscat\ddOutput.h" />
     <ClInclude Include="rtmath\ddscat\ddOutputEnsemble.h" />
     <ClInclude Include="rtmath\ddscat\ddOutputSingle.h" />
+    <ClInclude Include="rtmath\ddscat\ddpar.h" />
     <ClInclude Include="rtmath\ddscat\ddscat.h" />
     <ClInclude Include="rtmath\ddscat\ddScattMatrix.h" />
     <ClInclude Include="rtmath\ddscat\ddweights.h" />
@@ -213,6 +214,7 @@
     <ClCompile Include="src\ddOutputEnsemble.cpp" />
     <ClCompile Include="src\ddOutputMie.cpp" />
     <ClCompile Include="src\ddOutputSingle.cpp" />
+    <ClCompile Include="src\ddpar.cpp" />
     <ClCompile Include="src\ddscat.cpp" />
     <ClCompile Include="src\ddScattMatrix.cpp" />
     <ClCompile Include="src\ddweights.cpp" />
