cmake improvements. adjusted apps with build include file so that I don't have to change 15 apps CMakeLists each time I change my build system. also consolidated build options for c++11 and msvc flags. fixed a few bugs that I noticed involving irregular build options.
todos are in main CMakeLists file. Also need llvm and intel compiler support.


git-svn-id: file:///mnt/svn/rtmath@473 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -46,6 +46,13 @@ set(CPACK_COMPONENT_APPLICATIONS_DEPENDS Libraries)
 
 set(CPACK_COMPONENT_LIBRARIES_REQUIRED 1)
 
+# TODO: add RPM building package separation
+# TODO: add Ubuntu package separation
+# TODO: add package dependencies
+# TODO: add structure to MSVC build files (solution folders)
+# TODO: add headers to rtmath solution build, in their appropriiate directories
+# TODO: add postgresql support
+
 # This must always be last!
 include(CPack)
 
