--- a/rtmath/rtmath-apps/da/CMakeLists.txt
+++ b/rtmath/rtmath-apps/da/CMakeLists.txt
@@ -3,19 +3,5 @@
 include (../../CMakeRules/common.cmake)
 
 add_executable (rtmath-da da.cpp)
-target_link_libraries (rtmath-da rtmath)
-
-IF(${UNIX})
-target_link_libraries (rtmath-da netcdf m boost_filesystem boost_unit_test_framework boost_system)
-ENDIF(${UNIX})
-
-include_directories (AFTER SYSTEM ${ROOT_INCLUDES})
-target_link_libraries (rtmath-da ${ROOT_LIBRARIES})
-
-# Use C++11 in gcc
-IF(${CMAKE_COMPILER_IS_GNUCXX})
-set_target_properties(rtmath-da PROPERTIES COMPILE_FLAGS -std=c++0x)
-ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
-
-INSTALL(TARGETS rtmath-da RUNTIME DESTINATION bin COMPONENT Applications)
-
+set(appname rtmath-da)
+include (../../CMakeRules/addapp.cmake)
