--- a/rtmath/rtmath-apps/getm/CMakeLists.txt
+++ b/rtmath/rtmath-apps/getm/CMakeLists.txt
@@ -3,19 +3,8 @@
 include (../../CMakeRules/common.cmake)
 
 add_executable (rtmath-getm getm.cpp)
-target_link_libraries (rtmath-getm rtmath)
-
-IF(${UNIX})
-target_link_libraries (rtmath-getm netcdf m boost_filesystem boost_unit_test_framework boost_system)
-ENDIF(${UNIX})
-
-include_directories (AFTER SYSTEM ${ROOT_INCLUDES})
-target_link_libraries (rtmath-getm ${ROOT_LIBRARIES})
-
-# Use C++11 in gcc
-IF(${CMAKE_COMPILER_IS_GNUCXX})
-set_target_properties(rtmath-getm PROPERTIES COMPILE_FLAGS -std=c++0x)
-ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
+set(appname rtmath-getm)
+include (../../CMakeRules/addapp.cmake)
 
 #INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin COMPONENT Applications)
 INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin RENAME rtmath-genmtab COMPONENT Applications)
