--- a/rtmath/rtmath-apps/uuid/CMakeLists.txt
+++ b/rtmath/rtmath-apps/uuid/CMakeLists.txt
@@ -3,19 +3,5 @@
 include (../../CMakeRules/common.cmake)
 
 add_executable (rtmath-uuid uuid.cpp)
-target_link_libraries (rtmath-uuid rtmath)
-
-IF(${UNIX})
-target_link_libraries (rtmath-uuid netcdf m boost_filesystem boost_unit_test_framework boost_system)
-ENDIF(${UNIX})
-
-include_directories (AFTER SYSTEM ${ROOT_INCLUDES})
-target_link_libraries (rtmath-uuid ${ROOT_LIBRARIES})
-
-# Use C++11 in gcc
-IF(${CMAKE_COMPILER_IS_GNUCXX})
-set_target_properties(rtmath-uuid PROPERTIES COMPILE_FLAGS -std=c++0x)
-ENDIF(${CMAKE_COMPILER_IS_GNUCXX})
-
-INSTALL(TARGETS rtmath-uuid RUNTIME DESTINATION bin COMPONENT Applications)
-
+set(appname rtmath-uuid)
+include (../../CMakeRules/addapp.cmake)
