More build system changes. On MSVC, the projects now have build folders. Buils app scripts simplified. Now can use modules (and can just include and call by name).
git-svn-id: file:///mnt/svn/rtmath@474 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/absorb-slab/CMakeLists.txt
+++ b/rtmath/rtmath-apps/absorb-slab/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-absorb-slab absorb-slab.cpp)
-set(appname rtmath-absorb-slab)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-absorb-slab)
+
