--- a/rtmath/rtmath-apps/conv-units/CMakeLists.txt
+++ b/rtmath/rtmath-apps/conv-units/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-conv-units conv.cpp)
-set(appname rtmath-conv-units)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-conv-units)
+
