--- a/rtmath/rtmath-apps/da/CMakeLists.txt
+++ b/rtmath/rtmath-apps/da/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-da da.cpp)
-set(appname rtmath-da)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-da)
+
