--- a/rtmath/rtmath-apps/db-catalog-ddscat/CMakeLists.txt
+++ b/rtmath/rtmath-apps/db-catalog-ddscat/CMakeLists.txt
@@ -1,11 +1,8 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 # For now, don't build on windows
 IF(${UNIX})
 add_executable (rtmath-db-catalog-ddscat process_ddscat.cpp)
-set(appname rtmath-db-catalog-ddscat)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-db-catalog-ddscat)
 ENDIF(${UNIX})
 
