--- a/rtmath/rtmath-apps/ddparse/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddparse/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-ddparse ddparse2.cpp)
-set(appname rtmath-ddparse)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-ddparse)
+
