--- a/rtmath/rtmath-apps/ddscat-genparams/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-genparams/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-ddscat-genparams main.cpp Stdafx.cpp help.cpp)
-set(appname rtmath-ddscat-genparams)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-ddscat-genparams)
+
