--- a/rtmath/rtmath-apps/getm/CMakeLists.txt
+++ b/rtmath/rtmath-apps/getm/CMakeLists.txt
@@ -1,11 +1,7 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-getm getm.cpp)
-set(appname rtmath-getm)
-include (../../CMakeRules/addapp.cmake)
-
-#INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin COMPONENT Applications)
-INSTALL(TARGETS rtmath-getm RUNTIME DESTINATION bin RENAME rtmath-genmtab COMPONENT Applications)
+addapp(rtmath-getm)
+add_executable (rtmath-genmtab getm.cpp)
+addapp(rtmath-genmtab)
 
