--- a/rtmath/rtmath-apps/mie/CMakeLists.txt
+++ b/rtmath/rtmath-apps/mie/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-mie main.cpp)
-set(appname rtmath-mie)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-mie)
+
