--- a/rtmath/rtmath-apps/transmittance/CMakeLists.txt
+++ b/rtmath/rtmath-apps/transmittance/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-transmittance transmittance.cpp)
-set(appname rtmath-transmittance)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-transmittance)
+
