--- a/rtmath/rtmath-apps/uuid/CMakeLists.txt
+++ b/rtmath/rtmath-apps/uuid/CMakeLists.txt
@@ -1,7 +1,4 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-uuid uuid.cpp)
-set(appname rtmath-uuid)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-uuid)
