--- a/rtmath/rtmath-apps/atmosplot/CMakeLists.txt
+++ b/rtmath/rtmath-apps/atmosplot/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-include (../../CMakeRules/common.cmake)
-
+include (common)
 
 add_executable (rtmath-atmosplot atmosplot.cpp)
-set(appname rtmath-atmosplot)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-atmosplot)
+
