--- a/rtmath/rtmath-apps/combo/CMakeLists.txt
+++ b/rtmath/rtmath-apps/combo/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-combo combo2.cpp)
-set(appname rtmath-combo)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-combo)
+
