--- a/rtmath/rtmath-apps/rtmath-version/CMakeLists.txt
+++ b/rtmath/rtmath-apps/rtmath-version/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-version rtmath-version.cpp)
-set(appname rtmath-version)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-version)
+
