--- a/rtmath/rtmath-apps/sector/CMakeLists.txt
+++ b/rtmath/rtmath-apps/sector/CMakeLists.txt
@@ -1,7 +1,4 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-sector sector.cpp)
-set(appname rtmath-sector)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-sector)
