--- a/rtmath/rtmath-apps/shape/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape/CMakeLists.txt
@@ -1,7 +1,5 @@
-# Create the test program and link it with the rtmath library
-
-include (../../CMakeRules/common.cmake)
+include (common)
 
 add_executable (rtmath-shape shape-main.cpp)
-set(appname rtmath-shape)
-include (../../CMakeRules/addapp.cmake)
+addapp(rtmath-shape)
+
